# fastapi-workshop-pocketpizza

./: .gitignore  pyproject.toml  requirements.txt
src/: pocketpizza.db
src/pocketpizza/: database.py  deps.py  lifespan.py  main.py  model.py  schemas.py  security.py  settings.py
src/pocketpizza/api/: README.md  order.py  pizza.py  user.py
src/pocketpizza/dependencies/: db.py  repository.py  user.py
src/pocketpizza/repositories/: order.py  pizza.py  user.py
